Fixed website icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="imgs/emo.jpg">
     <meta property="og:title" content="Lordduck's portfolio">
     <meta property="og:description" content="A silly individual, who calls themselves a Fullstack developer">
-    <meta property="og:image" content="https://postimg.cc/PLWFYXj2">
+    <meta property="og:image" content="https://i.postimg.cc/QMwGLCnG/emo.jpg">
     <meta property="og:url" content="https://lordduck.space/">
     <meta property="og:type" content="website">
 </head>
