fixed embedding for discord

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <link rel="icon" type="image/x-icon" href="./imgs/pfp.jpg">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="1lordduck">
-  <meta property=”og:title” content="1lordduck's cool website!">
-  <meta property="og:url" content="https://lordduck.space/">
-  <meta property="og:type" content="website">
-  <meta property="og:description" content="A silly individual, who calls themselves a Fullstack developer">
+    <meta property="og:title" content="Lordduck's portfolio">
+    <meta property="og:description" content="A rather silly individual, who calls themselves a Fullstack developer">
+    <meta property="og:image" content="https://i.postimg.cc/QMwGLCnG/emo.jpg">
+    <meta property="og:url" content="https://lordduck.space/">
+    <meta property="og:type" content="website">
 </head>
 <body>
 <div class="main-container">
