--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/x-icon" href="./imgs/pfp.jpg">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Lordduck's portfolio">
+    <meta property="og:title" content="1lordduck's bio">
     <meta property="og:description" content="A rather silly individual, who calls themselves a Fullstack developer">
     <meta property="og:image" content="https://i.postimg.cc/QMwGLCnG/emo.jpg">
     <meta property="og:url" content="https://lordduck.space/">
