--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="1lordduck's bio">
     <meta property="og:description" content="A rather silly individual, who calls themselves a Fullstack developer">
-    <meta property="og:image" content="https://i.postimg.cc/QMwGLCnG/emo.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/Wb8yL89c/duckgoingout.jpg">
     <meta property="og:url" content="https://lordduck.space/">
     <meta property="og:type" content="website">
 </head>
