Updated github link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </ul>
     <div class="bio-footer">
       <div class="footer-item">
-        <a href="https://github.com/LordDuck02"><button class="footer-btn">Github</button></a>
+        <a href="https://github.com/1lordduck"><button class="footer-btn">Github</button></a>
       </div>
       <div class="footer-item">
         <a href="https://www.youtube.com/@Lord_Duck"><button class="footer-btn">Youtube</button></a>
